force-app/main/default/objects/LocationAssignment__c/LocationAssignment__c.object-meta.xml
<CustomObject>
    <description>Location Assignment specifies the Execution Company for a Project Type at a specific Location. The Location Assignment is required to assign Jobs to an Execution Company for a Location. Location Assignment is related to Location, Account, and Project Type.</description>
    <label>Location Assignment</label>
    <nameField>
        <displayFormat>LA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>