force-app/main/default/objects/LocationAssignment__c/fields/AccountableExecutionCompany__c.field-meta.xml
<CustomField>
    <fullName>AccountableExecutionCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accountable Execution Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ExecutionCompany</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Location Assignments</relationshipLabel>
    <relationshipName>Location_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>