force-app/main/default/objects/LocationAssignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>ProjectType__c</columns>
    <columns>AccountableExecutionCompany__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>